@@ -49,6 +49,7 @@
 -Added command line parameters
 -Fixed cases where control panel would set the player location when it shouldn't
 -Fix more spurious ineraction of control panel and player
+-Better performance when viewing video and dragging location bar with a large domain.
 
 1.0.1 - September 23, 2004
 -Add tooltips for control panel buttons
